# hellcat

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  clean.sh  compile_make.sh  compile_xcode.sh  get_libraries.sh
benchmark/: benchmark.sh  get_random.lua  get_sequential.lua  set_random.lua  set_sequential.lua
src/: array_ref.h  common.h  hellcat.h  program.cpp  string_ref.h
src/indexing/: index_dictionary.cpp  index_dictionary.h  index_reader.cpp  index_reader.h  index_writer.cpp  index_writer.h
src/simd_compression/: intersection.h
src/storage/: lmdb_store.cpp  lmdb_store.h  store.h  transaction.cpp  transaction.h
